# opera

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: coverage.yml  unix.yml  win.yml
.history/include/: mode_20220427154756.hpp  mode_20220428103803.hpp  mode_20220503101616.hpp  mode_20220503101821.hpp  mode_20220503140155.hpp  mode_20220503140919.hpp  state_20220331114741.hpp  state_20220406100534.hpp  state_20220406100659.hpp  state_20220406101314.hpp  state_20220406101356.hpp  state_20220406102042.hpp  state_20220406102312.hpp  state_20220406102512.hpp  state_20220406102540.hpp  state_20220406103604.hpp  state_20220406104148.hpp  state_20220406104345.hpp  state_20220406104412.hpp  state_20220406104415.hpp  state_20220407101832.hpp  state_20220407101849.hpp  state_20220407110751.hpp  state_20220407112523.hpp  state_20220407112803.hpp  state_20220407112806.hpp  state_20220413095130.hpp  state_20220413095527.hpp  state_20220413095730.hpp  state_20220413100004.hpp  state_20220413100543.hpp  state_20220413101307.hpp  state_20220413101409.hpp  state_20220413101511.hpp  state_20220413101930.hpp  state_20220413101935.hpp  state_20220413101940.hpp  state_20220413102003.hpp  state_20220413102426.hpp  state_20220413102455.hpp  (+144 more)
.history/src/: mode_20220428103737.cpp  mode_20220428103837.cpp  mode_20220503101820.cpp  mode_20220503102441.cpp  mode_20220503102529.cpp  mode_20220503102532.cpp  mode_20220503140154.cpp  mode_20220503140339.cpp  mode_20220503140436.cpp  mode_20220503140632.cpp  mode_20220503140711.cpp  mode_20220503140920.cpp  mode_20220503141444.cpp  state_20220329093949.cpp  state_20220330100518.cpp  state_20220406101315.cpp  state_20220406101357.cpp  state_20220406102043.cpp  state_20220406102410.cpp  state_20220406102510.cpp  state_20220406102542.cpp  state_20220406103234.cpp  state_20220406103635.cpp  state_20220406104149.cpp  state_20220406104347.cpp  state_20220406104420.cpp  state_20220406112529.cpp  state_20220406112550.cpp  state_20220407105435.cpp  state_20220407105710.cpp  state_20220407105740.cpp  state_20220407110031.cpp  state_20220407110043.cpp  state_20220407110251.cpp  state_20220407110303.cpp  state_20220407110313.cpp  state_20220407110317.cpp  state_20220407110327.cpp  state_20220407110557.cpp  state_20220407110608.cpp  (+692 more)
.history/test/: test_state_20220406103612.cpp  test_state_20220406103750.cpp  test_state_20220406103804.cpp  test_state_20220406103838.cpp  test_state_20220406103918.cpp  test_state_20220406103957.cpp  test_state_20220406104021.cpp  test_state_20220406104747.cpp  test_state_20220406104827.cpp  test_state_20220406105158.cpp  test_state_20220406105243.cpp  test_state_20220406105339.cpp  test_state_20220406105448.cpp  test_state_20220406105537.cpp  test_state_20220406105611.cpp  test_state_20220406105638.cpp  test_state_20220406105729.cpp  test_state_20220407113223.cpp  test_state_20220407113712.cpp  test_state_20220407113752.cpp  test_state_20220407113941.cpp  test_state_20220407114025.cpp  test_state_20220407114139.cpp  test_state_20220407114752.cpp  test_state_20220407114757.cpp  test_state_20220407114921.cpp  test_state_20220407115034.cpp  test_state_20220407115144.cpp  test_state_20220407115214.cpp  test_state_20220407115254.cpp  test_state_20220407115540.cpp  test_state_20220407115755.cpp  (+246 more)
cmake/: Findmqtt.cmake  config.hpp.cmake
include/: barrier.hpp  body.hpp  body_registry.hpp  broker.hpp  broker_access.hpp  broker_access_manager.hpp  command_line_interface.hpp  declarations.hpp  deserialisation.hpp  geometry.hpp  handle.hpp  interval.hpp  kafka.hpp  lookahead_job.hpp  lookahead_job_factory.hpp  lookahead_job_registry.hpp  macros.hpp  memory.hpp  memory.tpl.hpp  message.hpp  mode.hpp  mqtt.hpp  runtime.hpp  runtime_io.hpp  runtime_io.tpl.hpp  serialisation.hpp  state.hpp  synchronised_queue.hpp  thread.hpp  topic.hpp  trace_sample_range.hpp  utility.hpp
profile/: CMakeLists.txt  profile.hpp  profile_barrier.cpp  profile_body.cpp  profile_deserialisation.cpp  profile_geometry.cpp  profile_serialisation.cpp  profile_state.cpp  stopwatch.hpp
src/: CMakeLists.txt  barrier.cpp  body.cpp  body_registry.cpp  command_line_interface.cpp  deserialisation.cpp  geometry.cpp  kafka.cpp  lookahead_job.cpp  lookahead_job_factory.cpp  lookahead_job_registry.cpp  memory.cpp  message.cpp  mode.cpp  mqtt.cpp  operad.cpp  runtime.cpp  runtime_io.cpp  serialisation.cpp  state.cpp  thread.cpp  topic.cpp  trace_sample_range.cpp
test/: CMakeLists.txt  test.hpp  test_barrier.cpp  test_body.cpp  test_body_registry.cpp  test_broker_access.hpp  test_command_line_interface.cpp  test_deserialisation.cpp  test_geometry.cpp  test_interval.cpp  test_kafka.cpp  test_lookahead_job.cpp  test_lookahead_job_factory.cpp  test_lookahead_job_registry.cpp  test_memory.cpp  test_message.cpp  test_mode.cpp  test_mqtt.cpp  test_runtime.cpp  test_runtime_io.cpp  test_serialisation.cpp  test_state.cpp  test_thread.cpp  test_trace_sample_range.cpp
(+7 files in other folders)
